@@ -1,3 +1,8 @@
+Fri Oct 21 17:42:28 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>
+
+ - newhidups: added missing "usage" definitions from HID Power
+   Device specification, corrected spellings.
+
 Fri Oct 21 03:38:17 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>
 
  - newhidups: enforce using "-x vendorid" together with "-x generic". 
